# react-sc

./: .env  .gitignore  README.md  bun.lockb  config.toml  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  server_6.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/default_configs/: butterfly.toml  double-chain.toml  double_chain.toml  star.toml  star_decagram.toml  sub_net_shapes.toml  sub_net_stars.toml  subnet-star.toml  subnet-triangle.toml  tree.toml
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  utils.rs
src-tauri/src/commands/: config.rs  controller.rs  metrics.rs  mod.rs  network.rs  settings.rs  simulation.rs  stats.rs  topology.rs
src-tauri/src/listener/: listener.rs  mod.rs
src-tauri/src/network/: configs.rs  metrics.rs  mod.rs  network_initializer.rs  network_node.rs  state.rs  validation.rs
src-tauri/src/simulation/: mod.rs
src-tauri/src/simulation/configs/: configs_handler.rs  mod.rs
src-tauri/src/simulation/controller/: controller_commands.rs  mod.rs
src-tauri/src/simulation/initializer/: factory.rs  mod.rs  network_initializer.rs
src-tauri/src/simulation/listener/: mod.rs
src-tauri/src/simulation/metrics/: metrics_handler.rs  mod.rs
src-tauri/src/simulation/state/: mod.rs  state_handler.rs
src-tauri/src/simulation/topology/: mod.rs  topology_handler.rs  validations.rs
src-tauri/static/client/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src-tauri/static/client/frontend/client-build/: index.html
src-tauri/static/client/frontend/client-build/assets/: index-AFniX-HG.js  index-BwRiVuD1.css
src-tauri/static/client/frontend/src/: App.svelte  app.css
src-tauri/static/client/frontend/src/lib/: Chat.svelte  ChatBox.svelte  ChatContainer.svelte  EmojiButton.svelte  ImageViewer.svelte  Message.svelte  ServerSelector.svelte  Toast.svelte
src-tauri/static/client/frontend/src/stores/: events.ts  store.ts  users.ts
src-tauri/static/client/frontend/src/types/: message.ts  websocket.ts
src-tauri/static/client/frontend/src/utils/: chat.ts  file.ts  init.ts  users.ts
src-tauri/static/server/emeliyanov/: asset-manifest.json  index.html
src-tauri/static/server/emeliyanov/static/js/: main.004c80ae.js  main.004c80ae.js.map
src-tauri/static/server/frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
src-tauri/static/server/frontend/public/: index.html
src-tauri/static/server/frontend/src/: App.tsx  GlobalState.ts
src-tauri/static/server/frontend/src/components/: BarChart.tsx  Chart.tsx  ExpandableCell.tsx  ExpandableSection.tsx  LineChart.tsx  Pagination.tsx  PieChart.tsx  Sidebar.tsx  Table.tsx
(+75 files in other folders)
