[package]
name = "reactsc"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reactsc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
crossbeam-channel = "0.5.13"
toml = "0.8.19"


wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
node = { git = "ssh://github.com/Rustbusters/node.git" }
rustbusters-drone = { git = "ssh://github.com/Rustbusters/drone.git" }

thiserror = "2.0.3"
parking_lot = "0.12"
