[package]
name = "reactsc"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reactsc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
crossbeam-channel = "0.5.13"
toml = "0.8.19"
tracing-subscriber = "0.3.19"
dotenv = "0.15"


wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
rustbusters-drone = { git = "ssh://github.com/Rustbusters/drone.git", branch = "dev/safe-sounds" }
client = { git = "https://github.com/Rustbusters/client.git" }
#client = { path = "../../client" }
server = { git = "https://github.com/Rustbusters/server.git" }
#server = { path = "../../server" }
common-utils = { git = "https://github.com/Rustbusters/common-utils.git" }
rusty_drones = { git = "https://github.com/rusty-drone-2024/rusty-drone.git" }
lockheedrustin-drone = { git = "https://github.com/Lockheed-Rustin/drone.git" }

thiserror = "2.0.3"
parking_lot = "0.12"
tauri-plugin-dialog = "2"
